# order_processing_system

./: .gitignore  BUILD.md
cmake/: compiler_options.cmake  sanitizer_options.cmake  test_framework.hpp  testing.cmake  warnings.cmake
stages/stage_00_linear/: TASK.md  TASK_00.md
stages/stage_00_linear/solution/: CMakeLists.txt
stages/stage_00_linear/solution/src/: main.cpp
stages/stage_00_linear/tests/: CMakeLists.txt  test_main.cpp
stages/stage_01_naive/: CMakeLists.txt  TASK.md  TASK_01.md
stages/stage_01_naive/tests/: CMakeLists.txt  test_main.cpp
stages/stage_02_protected/: TASK.md  TASK_02.md
stages/stage_02_protected/tests/: CMakeLists.txt  test_main.cpp
stages/stage_03_blocking/: BUILD_CLI.md  TASK_03.md
stages/stage_03_blocking/tests/: CMakeLists.txt  test_main.cpp
stages/stage_03_managed/: CMakeLists.txt  TASK.md
stages/stage_03_managed/tests/: CMakeLists.txt  test_main.cpp
stages/stage_04_memory/: TASK.md
stages/stage_04_memory/tests/: CMakeLists.txt  test_main.cpp
stages/stage_04_thread_pool/: BUILD_CLI.md  TASK_04.md
stages/stage_04_thread_pool/tests/: CMakeLists.txt  test_main.cpp
stages/stage_05_components/tests/: CMakeLists.txt
stages/stage_05_docs/: TASK_05.md
